static/styles/settings.css
/* ... */
.edit_bot_form label {
    text-transform: uppercase;
    font-weight: 600;
    color: #aaa;
    margin-top: 5px;
}

.edit_bot_form .buttons {
    margin: 10px 0px 5px 0px;
}

.edit_bot_email {
    font-weight: 400;
    font-size: 18px;
    text-align: left;
    margin-top: 0px;
    margin-bottom: 10px;

    overflow: hidden;
    max-height: 1.1em;
    text-overflow: ellipsis;
    white-space: pre;
}

#create_bot_form .control-label,
#create_alert_word_form .control-label,
#get_api_key_box .control-label,
.admin-emoji-form .control-label,
.admin-filter-form .control-label,
.default-stream-form .control-label,
.edit_bot_form .control-label {
    width: 10em;
    text-align: right;
    margin-right: 20px;
}

#upload_avatar_spinner,
#upload_icon_spinner {
    font-size: 14px;
    margin: auto;
}

.bot_name_header {
    width: 8em;
}

#empty_alert_word_error {
    display: none;
    width: 90%;
    margin: 0 auto;
    margin-bottom: 15px;
    padding: 10px;
}

#empty_alert_word_error .close {
    position: inherit;
}

#alert_words_list,
#attachments_list {
    list-style-type: none;
    margin: auto;
    background-color: #fff;
}

#alert_words_list li.alert-word-item:last-child {
    background: none;
    margin-top: 8px;
}

#alert_words_list .edit-alert-word-buttons,
#attachments_list .edit-attachment-buttons {
    position: absolute;
    right: 20px;
    top: 5px;
}

#alert_words_list .alert_word_listing .value {
    display: block;
    white-space: -moz-pre-wrap !important;
    white-space: -pre-wrap;
    white-space: -o-pre-wrap;
    white-space: pre-wrap;
    word-wrap: break-word;
    word-break: break-all;
    white-space: normal;
}

.open-user-form {
    min-width: initial !important;
}

#user-settings-avatar {
    border-radius: 5px;
    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
    width: 200px;
    height: 200px;
}

#realm-settings-icon {
    border-radius: 5px;
    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
    width: 100px;
    height: 100px;
    margin-left: 25%;
}
/* -- new settings overlay -- */
#settings_page {
    min-height: 550px;
}

#settings_page {
    height: 95vh;
    width: 97vw;
    margin: 2.5vh 1.5vw;
    background-color: #fff;
    overflow: hidden;
    border-radius: 4px;

    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;

    transition: transform 0.2s ease;
}

#settings_page .sidebar {
    float: left;
    position: relative;
    width: 250px;
    height: 100%;
    min-height: 550px;
    overflow-y: auto;
    border-top-left-radius: 4px;
    border-right: 1px solid #eee;
}

#settings_page .sidebar .tab-container {
    background-color: #fff;
    padding: 6px;
    border-bottom: 1px solid #ddd;
}

#settings_page .sidebar .settings-list {
    position: relative;
    z-index: 3;
}

#settings_page .content-wrapper {
    position: absolute;
    left: 251px;
    /* the width of the settings sidbar this is right of is 250px + 1px border. */
    width: calc(100% - 250px - 1px);
    height: 100%;
}

#settings_page .content-wrapper .settings-header {
    width: 100%;
    height: 43px;
    border-bottom: 1px solid #ddd;
}

#settings_page .content-wrapper #settings_content {
    width: 100%;
    height: calc(100% - 60px);

    float: left;
    overflow-y: auto;
}

#settings_page .form-sidebar {
    position: absolute;
    top: 45px;
    right: 0px;
    transform: translateX(303px);
    width: 300px;
    height: calc(100% - 45px);

    background-color: #fff;
    border-left: 1px solid #ddd;

    pointer-events: none;
    transition: all 0.3s ease;
}

#settings_page .form-sidebar.show {
    pointer-events: auto;
    transform: translateX(0px);
}

#settings_page .form-sidebar input[type=text] {
    width: calc(100% - 10px - 4px);
}

#settings_page .form-sidebar input[type=submit],
#settings_page .form-sidebar button {
    border-radius: 4px;
    outline: none;
}

#settings_page .form-sidebar select {
    width: 100%;
}

#settings_page .form-sidebar .title,
#settings_page .form-sidebar .content {
    padding: 20px;
}

#settings_page .form-sidebar .title {
    background-color: #fafafa;
    padding: 10px 20px;
    border-bottom: 1px solid #ddd;
}

#settings_page .form-sidebar .title h1 {
    display: inline-block;
    font-size: 1.3rem;
    margin: 0px;
}

#settings_page .form-sidebar .title .exit {
    float: right;
    font-size: 2rem;
    font-weight: 300;
    margin-top: 11px;
    cursor: pointer;
}

#settings_page .sidebar .header {
    height: auto;
    position: relative;
    width: calc(100% - 20px);
    padding: 10px;
    text-align: center;
    text-transform: uppercase;

    background-color: #edefef;
    border-bottom: 1px solid #DDD;
}

#settings_page .settings-header {
    padding-top: 1px;
}

#settings_page .settings-header h1 {
    text-align: center;
    font-size: 1.1em;
    line-height: 1;
    margin: 15px;
    text-transform: uppercase;
}

#settings_page .settings-header .exit {
    font-weight: 600;
    position: absolute;
    top: 10px;
    right: 10px;
    color: #AAA;
    cursor: pointer;
}

#settings_page .settings-header .exit-sign {
    float: right;
    position: relative;
    top: 3px;
    margin-left: 3px;
    font-size: 1.5rem;
    font-weight: 600;
    cursor: pointer;
}


#deactivation_user_modal.fade.in {
    top: calc(50% - 120px);
}

#deactivate_self_modal {
    box-shadow: 0px 0px 75px rgba(0,0,0,0.5);
    outline: 10000px solid rgba(0,0,0,0.3);
    border: none;
    border-radius: 0px;
}

input[type=text]#settings_search {
    width: calc(100% - 10px - 2px);
    margin: 0px;

    color: #555;
    font-size: 0.9rem;
    padding: 3px 5px;
    outline: none;
    border: 1px solid #DDD;
    border-radius: 4px;
}

input[type=text]:focus#settings_search {
    box-shadow: none;
    border: 1px solid #BBB;

    border-bottom: 1px solid #DDD;
}

input[type=text]#settings_search {
    width: calc(100% - 10px - 2px);
    margin: 0px;
}
/* ... */

