Fix settings page height issue.
The height of the settings page content is not quite as tall as the
settings page could allow which makes for an empty white space at the
bottom of the settings content container.

--- a/static/styles/settings.css
+++ b/static/styles/settings.css
@@ -764,8 +764,9 @@ input[type=checkbox].inline-block {
 }
 
 #settings_page .content-wrapper #settings_content {
+    position: relative;
     width: 100%;
-    height: calc(100% - 60px);
+    height: calc(100% - 45px);
 
     float: left;
     overflow-y: auto;
